<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ComauControl" Id="{17e3e05b-7a2d-4934-b6b4-b106fae15aec}">
    <Declaration><![CDATA[TYPE ComauControl :
STRUCT
	udp_key		: DINT := 0;
	mode		: DINT := 0;
	omega		: REAL := 1.0;
	beta		: REAL := 1.0;
	q1			: REAL := 0.0;
	q2			: REAL := 0.0;
	q3			: REAL := -90.0;
	q4			: REAL := 0.0;
	q5			: REAL := 90.0;
	q6			: REAL := 0.0;
	q1_t		: REAL := 0.0;
	q2_t		: REAL := 0.0;
	q3_t		: REAL := 0.0;
	q4_t		: REAL := 0.0;
	q5_t		: REAL := 0.0;
	q6_t		: REAL := 0.0;
	q1_tt		: REAL := 0.0;
	q2_tt		: REAL := 0.0;
	q3_tt		: REAL := 0.0;
	q4_tt		: REAL := 0.0;
	q5_tt		: REAL := 0.0;
	q6_tt		: REAL := 0.0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>